# xos

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  burn_xos_iso  cloc  compile.sh  config_bochs  configure  plan.txt  qemu.sh  run_xos_bin  run_xos_iso
arch/: CMakeLists.txt
arch/i386/: CMakeLists.txt  linker.ld
arch/i386/boot/: CMakeLists.txt
arch/i386/boot/src/: boot.s
arch/i386/kernel/: CMakeLists.txt
arch/i386/kernel/asm/: CMakeLists.txt
arch/i386/kernel/asm/include/xos/: atomic.h  div64.h  interrupt-enable.h  interrupt-handler.h  pause.h  port.h
arch/i386/kernel/containers/: CMakeLists.txt
arch/i386/kernel/containers/include/xos/: containers.h
arch/i386/kernel/containers/include/xos/containers/: bitset.h  circular-buffer.h  result.h
arch/i386/kernel/cpuid/: CMakeLists.txt
arch/i386/kernel/cpuid/include/xos/: cpuid.h
arch/i386/kernel/cpuid/include/xos/cpuid/: entry.h  feature.h
arch/i386/kernel/cpuid/src/: cpuid.cpp  entry.cpp  entry.h  feature.cpp  isAvailable.h  isAvailable.s
arch/i386/kernel/descriptors/: CMakeLists.txt
arch/i386/kernel/descriptors/include/xos/: descriptors.h
arch/i386/kernel/descriptors/include/xos/descriptors/: descriptor-register.h  gdt.h  idt.h  write.h
arch/i386/kernel/descriptors/include/xos/descriptors/gdt/: gdt-entry.h  gdtr.h  write.h
arch/i386/kernel/descriptors/include/xos/descriptors/idt/: idt-entry.h  idtr.h  write.h
arch/i386/kernel/descriptors/src/: gdt.cpp  idt.cpp  isr.S
arch/i386/kernel/drivers/: CMakeLists.txt
arch/i386/kernel/drivers/include/xos/drivers/: pic8259.h  ps2.h
arch/i386/kernel/drivers/include/xos/drivers/ps2/: keyboard.h
arch/i386/kernel/drivers/src/: pic8259.cpp
arch/i386/kernel/drivers/src/ps2/: keyboard.cpp  scan-code.h
arch/i386/kernel/gdt/: CMakeLists.txt
arch/i386/kernel/gdt/include/xos/: gdt.h
arch/i386/kernel/gdt/include/xos/gdt/: write.h
arch/i386/kernel/gdt/src/: gdt.cpp
arch/i386/kernel/memory/: CMakeLists.txt
arch/i386/kernel/memory/include/xos/memory/: write.h
arch/i386/kernel/memory/include/xos/memory/mapping/: physical.h
arch/i386/kernel/memory/include/xos/memory/mapping/physical/: write.h
arch/i386/kernel/memory/src/: write.cpp
arch/i386/kernel/memory/src/mapping/: physical.cpp
arch/i386/kernel/multiboot/: CMakeLists.txt
arch/i386/kernel/multiboot/include/xos/: mbt.h
arch/i386/kernel/multiboot/include/xos/mbt/: write.h
arch/i386/kernel/multiboot/include/xos/multiboot/: write.h
arch/i386/kernel/multiboot/src/: mbt.cpp  multiboot.cpp  write.cpp
arch/i386/kernel/tty/: CMakeLists.txt
arch/i386/kernel/tty/include/xos/: tty.h
arch/i386/kernel/tty/src/: tty.cpp
arch/i386/kernel/vga/: CMakeLists.txt
arch/i386/kernel/vga/include/xos/: vga.h
arch/i386/kernel/vga/src/: vga.cpp
arch/x86_64/: CMakeLists.txt  linker.ld
arch/x86_64/boot/: CMakeLists.txt
arch/x86_64/boot/include/: start.h
arch/x86_64/boot/src/: boot.cpp  start.cpp  stivale2.h
arch/x86_64/kernel/: CMakeLists.txt
arch/x86_64/kernel/stivale2/: CMakeLists.txt
arch/x86_64/kernel/stivale2/include/xos/: stivale2.h
arch/x86_64/kernel/stivale2/src/: tmp.cpp
arch/x86_64/kernel/tty/: CMakeLists.txt
core/: CMakeLists.txt
core/include/sys/: cdefs.h
core/include/xos/: always-inline.h  ext_c.h  extern-c.h  interrupt.h  no-return.h  noreturn.h  packed.h  restrict.h  utility.h
image_root/: CMakeLists.txt
image_root/src/: limine.cfg
image_root/src/boot/grub/: grub.cfg
libc/: CMakeLists.txt
libc/include/: cctype  cstddef  cstdint  cstdio  cstdlib  cstring  ctype.h  stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/include/xos/: attributes.h  format.h  stdio.h  string.h  utility.h  write.h  write_decl.h
libc/src/: stdio.cpp  string.cpp  tmp.cpp
libc/src/libk/: ctype.cpp  stdio.cpp  stdlib.cpp  string.cpp  tmp.cpp
libc/src/stdio/: format.cpp  write.cpp
src/: disk.asm  src.asm
xos/: CMakeLists.txt
xos/src/: compiler_checks.h  kernel_main.cpp  start.cpp  stivale2.h
